syntax = "proto3";

package packet;

// room data
message Room {
  string name = 1;
  optional string pwd = 2;
  repeated int32 enterPlayers = 3;
}

// on connected to server
message S_ConnectedToServer {
  int32 playerId = 1;
}

// (request) get room list
message C_RoomListReq { }

// (response) load all rooms
message S_RoomListRes {
  repeated Room rooms = 1;
}

// create new room
message C_CreateRoom {
  Room reqRoom = 1;
}

message C_EnterRoomReq {
  string roomName = 1;
  string submitPwd = 2;
}

message S_EnterRoomRes {
  bool isOk = 1;
  optional Room enterRoom = 2;
}

message C_LeaveRoom { }

message S_UnicastLeaveRoom {
  Room room = 1;
}